fix long formula overflow issue in lfHist

--- a/pla.css
+++ b/pla.css
@@ -174,6 +174,8 @@ a {
 
 .lf {
   min-height: 1.75em;
+  -webkit-flex: none;
+  flex: none;
 }
 
 .lf-toggle {
